// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTreemapParentFields component Renders ConfigTreemapParentFields with data 1`] = `
<ConfigTreemapParentFields
  handleUpdateParentFields={[MockFunction]}
  selectedAxis={
    Array [
      Object {
        "label": "spectrum",
        "name": "spectrum",
        "type": "spectrum",
      },
    ]
  }
  setSelectedParentItem={[MockFunction]}
>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiPanel
    className="panelItem_button"
    paddingSize="s"
  >
    <div
      className="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow panelItem_button"
    >
      <EuiText
        className="field_text"
        size="s"
      >
        <div
          className="euiText euiText--small field_text"
        >
          <EuiLink
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <button
              className="euiLink euiLink--primary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              spectrum
            </button>
          </EuiLink>
        </div>
      </EuiText>
      <EuiButtonIcon
        aria-label="clear-field"
        color="subdued"
        iconSize="s"
        iconType="cross"
        onClick={[Function]}
      >
        <button
          aria-label="clear-field"
          className="euiButtonIcon euiButtonIcon--subdued euiButtonIcon--empty euiButtonIcon--xSmall"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="s"
            type="cross"
          >
            <EuiIconEmpty
              aria-hidden={true}
              className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
              focusable="false"
              role="img"
              style={null}
            >
              <svg
                aria-hidden={true}
                className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height={16}
                role="img"
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </EuiIconEmpty>
          </EuiIcon>
        </button>
      </EuiButtonIcon>
    </div>
  </EuiPanel>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiPanel
    className="panelItem_button"
    grow={true}
  >
    <div
      className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow panelItem_button"
    >
      <EuiText
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          Add Parent
        </div>
      </EuiText>
      <EuiButtonIcon
        aria-label="clear-field"
        color="primary"
        iconSize="s"
        iconType="plusInCircle"
        onClick={[Function]}
      >
        <button
          aria-label="clear-field"
          className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="s"
            type="plusInCircle"
          >
            <EuiIconPlusInCircle
              aria-hidden={true}
              className="euiIcon euiIcon--small euiIcon--inherit euiButtonIcon__icon"
              focusable="false"
              role="img"
              style={null}
            >
              <svg
                aria-hidden={true}
                className="euiIcon euiIcon--small euiIcon--inherit euiButtonIcon__icon"
                focusable="false"
                height={16}
                role="img"
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 7h3.5a.5.5 0 110 1H8v3.5a.5.5 0 11-1 0V8H3.5a.5.5 0 010-1H7V3.5a.5.5 0 011 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 100 13.236A6.618 6.618 0 007.5.882z"
                  fillRule="evenodd"
                />
              </svg>
            </EuiIconPlusInCircle>
          </EuiIcon>
        </button>
      </EuiButtonIcon>
    </div>
  </EuiPanel>
</ConfigTreemapParentFields>
`;

exports[`ConfigTreemapParentFields component Renders ConfigTreemapParentFields with empty data 1`] = `
<ConfigTreemapParentFields
  handleUpdateParentFields={[MockFunction]}
  selectedAxis={Array []}
  setSelectedParentItem={[MockFunction]}
>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiPanel
    className="panelItem_button"
    grow={true}
  >
    <div
      className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow panelItem_button"
    >
      <EuiText
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          Add Parent
        </div>
      </EuiText>
      <EuiButtonIcon
        aria-label="clear-field"
        color="primary"
        iconSize="s"
        iconType="plusInCircle"
        onClick={[Function]}
      >
        <button
          aria-label="clear-field"
          className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="s"
            type="plusInCircle"
          >
            <EuiIconEmpty
              aria-hidden={true}
              className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
              focusable="false"
              role="img"
              style={null}
            >
              <svg
                aria-hidden={true}
                className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height={16}
                role="img"
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </EuiIconEmpty>
          </EuiIcon>
        </button>
      </EuiButtonIcon>
    </div>
  </EuiPanel>
</ConfigTreemapParentFields>
`;
